--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "3badd6a1-65be-4074-9d6f-46fd614da76c"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
